###################################################################################
#
# CBrick
#
# Copyright (C) 2017-2020 Research Institute for Information Technology(RIIT), Kyushu University.
# All rights reserved.
#
###################################################################################

# Install files

install(FILES
        Doxyfile
        Makefile_doxygen
        CBrick_doc.md
        DESTINATION doc
)
