###################################################################################
#
# CBrick
#
# Copyright (c) 2017-2020 Research Institute for Information Technology(RIIT),
#                    Kyushu University.  All rights reserved.
#
####################################################################################

add_subdirectory(division)
add_subdirectory(commtest)
add_subdirectory(diff3d)
